@@ -7,16 +7,17 @@
  */
 package org.opendaylight.controller.cluster.datastore.config;
 
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import com.typesafe.config.Config;
 import com.typesafe.config.ConfigFactory;
 import java.util.List;
 import org.junit.Test;
 
 public class ConfigurationImplHybridTest extends ConfigurationImplBaseTest {
-
     @Override
     public ConfigurationImpl createConfiguration() {
-        Config moduleShardsConf = generateModuleShards(List.of(
+        final var moduleShardsConf = generateModuleShards(List.of(
                 generateShard("default", "default", List.of("member-1", "member-2", "member-3")),
                 generateShard("people", "people-1", List.of("member-1")),
                 generateShard("cars", "cars-1", List.of("member-1")),
@@ -25,14 +26,13 @@ public class ConfigurationImplHybridTest extends ConfigurationImplBaseTest {
         return new ConfigurationImpl(new HybridModuleShardConfigProvider(moduleShardsConf, "modules.conf"));
     }
 
-    @Test(expected = NullPointerException.class)
+    @Test
     public void testNullModuleShardsConf() {
-        new HybridModuleShardConfigProvider(null, "modules.conf");
+        assertThrows(NullPointerException.class, () -> new HybridModuleShardConfigProvider(null, "modules.conf"));
     }
 
     private static Config generateModuleShards(final List<String> shards) {
-        String moduleShardsContent = String.format("module-shards = [%n%s]", String.join(",\n", shards));
-        return ConfigFactory.parseString(moduleShardsContent);
+        return ConfigFactory.parseString("module-shards = [%n%s]".formatted(String.join(",\n", shards)));
     }
 
     private static String generateShard(final String name, final String shardsName, final List<String> replicas) {
